# mc-intent-classifier

./: .dockerignore  .env.docker.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  test.yaml
scripts/: eval.sh  serve.sh  train.sh
src/: application.py  celery_app.py  config.py  evaluate_model.py  fit_thresholds.py  intent_classifier.py  queueing.py  tasks.py  test.py  train.py  train_model.py  turn_client.py  turn_webhook.py  utils.py
src/artifacts/: clf_parent.pkl  clf_sensitive_exit.pkl  label_encoder.pkl  le_parent.pkl  le_sensitive_exit.pkl  manifest.json  thresholds.json
src/classifiers/: baseline.py  ensemble.py
src/config/: constants.py  schemas.py  thresholds.py
src/data/: build_datasets.py  intent_embeddings.json  mean_intent_embeddings.json  nlu.yaml  test.yaml  validation.yaml
src/evaluations/: evaluation_report.txt  final_performance_report.txt  misclassified_samples_final.json  misclassified_samples_tuning.json
src/mapped_data/: nlu.yaml  samples.test.jsonl  samples.test.meta.json  samples.train.jsonl  samples.train.meta.json  samples.validation.jsonl  samples.validation.meta.json  test.yaml  validation.yaml
src/utils/: logger.py  normalise.py
tests/: test_application.py  test_build_datasets.py  test_dataset_consistency.py  test_dataset_jsonl.py  test_intent_coverage.py  test_tasks.py  test_thresholds_serving.py  test_turn_client.py  test_utils.py
